<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".option">

    <fgori.ft_hanguots.Header
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="121dp"
        android:layout_height="68dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="302dp"
        android:layout_marginEnd="160dp"
        android:text="@string/profileSetting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch2" />

    <Button
        android:id="@+id/buttonHome"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/mask_circle"
        android:backgroundTint="@color/green"
        android:text="Home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <SeekBar
        android:id="@+id/seekBarRed"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/red_seekbar"
        android:max="255"
        app:layout_constraintBottom_toTopOf="@+id/seekBarGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/seekBarGreen"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/green_seekbar"
        android:max="255"
        app:layout_constraintBottom_toTopOf="@+id/seekBarBlu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/seekBarBlu"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="112dp"
        android:background="@drawable/blu_seekbar"
        android:max="255"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/ita"
        app:layout_constraintBottom_toBottomOf="@+id/switch2"
        app:layout_constraintEnd_toStartOf="@+id/switch2"
        app:layout_constraintTop_toTopOf="@+id/switch2"
        app:layout_constraintVertical_bias="0.586" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/eng"
        app:layout_constraintBottom_toBottomOf="@+id/switch2"
        app:layout_constraintStart_toEndOf="@+id/switch2"
        app:layout_constraintTop_toTopOf="@+id/switch2"
        app:layout_constraintVertical_bias="0.586" />


</androidx.constraintlayout.widget.ConstraintLayout>
